@@ -5,11 +5,8 @@
 # If used like /usr/bin/env then it will run other commands based on
 # your current path settings (with a local::lib environment if present)
 
-#  e.g. use FindBin qw( $Bin );
-#       BEGIN { do catfile( $Bin, q(<appname>_localenv) ) or croak $EVAL_ERROR }
-
-# The local::lib behavior can be explicitly enabled or disabled by setting
-# the <APPNAME>_LOCAL_LIB enviromnent variable to true or false.
+# e.g. use FindBin qw( $Bin );
+#    BEGIN { do catfile( $Bin, q(<appname>_localenv) ) or croak $EVAL_ERROR }
 
 use lib;
 use strict;
@@ -38,32 +35,27 @@ my $untaint    = sub {
 my $was_called = caller() ? 1 : 0;
 my $our_path   = $was_called ? (caller())[ 1 ] : $PROGRAM_NAME;
 my $bindir     = $untaint->( abs_path( dirname( $our_path ) ) );
-my $basedir    = -f catfile( $bindir, 'Build.PL' )
-              || -f catfile( $bindir, 'Makefile.PL' )
-               ? $bindir : dirname( $bindir );
-my $libdir     = catdir( $basedir, 'lib' );
-my $local_lib  = catdir( $basedir, $LOCAL_LIB );
-my $appname    = (split m{ [\-_] }mx, basename( $our_path, '.pl' ))[ 0 ];
-my $active_key = (uc $appname).'_LOCAL_LIB';
-my $active     = -d $local_lib;
+my $basedir    = dirname( $bindir );
+my $libdir     = catdir( $basedir, 'lib' ); my $local_lib;
 
-exists $ENV{ $active_key } and defined $ENV{ $active_key }
-   and $active = !! $ENV{ $active_key };
+# The libdir can be inside local_lib or it's sibling
+if (-d catdir( $libdir, 'perl5' )) { $local_lib = $basedir }
+else { $local_lib = catdir( $basedir, $LOCAL_LIB ) }
 
-if ($active) {
-   not -d $local_lib and warn "Path ${local_lib} not found from ${our_path}\n";
+if (-d $local_lib) {
    # So we can find local::lib when fully self contained
    lib->import( catdir( $local_lib, 'lib', 'perl5' ) );
 
    require local::lib; local::lib->import( $local_lib );
 
-   $extend->( 'PATH', catdir( $local_lib, 'bin' ) );
+   my $localbin = catdir( $local_lib, 'bin' );
+
+   -d $localbin and $localbin ne $bindir and $extend->( 'PATH', $localbin );
    $extend->( 'PERL5_MB_OPT', 'INSTALLMAN1DIR=none INSTALLMAN3DIR=none', q( ) );
 }
 
-$extend->( 'PATH', $bindir ); $extend->( 'PERL5LIB', $libdir );
-
-lib->import( $libdir );
+-d $bindir and $extend->( 'PATH', $bindir );
+-d $libdir and $extend->( 'PERL5LIB', $libdir ) and lib->import( $libdir );
 
 not $was_called and @ARGV and exec @ARGV;
 
