@@ -7,6 +7,7 @@ namespace::autoclean = 0.26
 namespace::clean  = 0.25
 strictures        = 2.000000
 Class::Usul       = v0.65.0
+Daemon::Control   = 0.001006
 Exporter::Tiny    = 0.042
 File::DataClass   = v0.66.0
 HTML::FormWidgets = v0.23.0
