@@ -1,5 +1,6 @@
 Revision history for Coverage::Server
 
+          - Added a Daemon
           - Added Config default_route
           - Refactored Config secret and coverage_token
           - Toolchain update
